--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,19 @@ html, :root, body, app {
     font-family: "Inter", sans-serif;
     font-size: 62.5%;
 }
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: #7a7f9d;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #21295c;
+}
+
+::-webkit-scrollbar-track:hover {
+    background: #cecece;
+}
